production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eed-java-backend-example
  labels:
    app: eed-java-backend-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eed-java-backend-example
  template:
    metadata:
      labels:
        app: eed-java-backend-example
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io.scheme: 'http'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: eed-java-backend-example
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/eed-java-backend-example:sha-15d057c
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: gh-secret
