production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eed-java-backend-example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: eed-java-backend-example-ingress
spec:
  rules:
  - host: "eed-app.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /ejbe(/|$)(.*)
        backend:
          service:
            name: eed-java-backend-example-service
            port: 
              number: 80
